@@ -1156,6 +1156,7 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 			usePercentageResourceValues: false,
 			highlightUnavailable: true,
 			hideSell: false,
+			hideBGImage: false,
 			noConfirm: false,
 			IWSmelter: true,
 			disableCMBR: false,
@@ -1420,6 +1421,7 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 			usePercentageResourceValues: false,
 			highlightUnavailable: true,
 			hideSell: false,
+			hideBGImage: false,
 			noConfirm: false,
 			IWSmelter: true,
 			disableCMBR: false,
