@@ -3,10 +3,13 @@ Major:
 * Allow to burn paragon without breaking Iron Will mode if insane Space Oddity has already been achieved
 * Improve kittens' save compression
 * Make Hydroponics increase kittens capacity of Terraforming Stations
-* New themes: Gold, Space, Wood
-* All themes except Classic and Inverted have to be unlocked
 * Fix Solar Farms not being affected by Winter Has Come
 * Do not refund AM if energy is negative
+
+Themes:
+* New themes: Gold, Space, Wood
+* All themes except Classic and Inverted have to be unlocked (permanent unlock)
+* Add an option in order to hide background image (if applicable)
 
 Minor:
 * Add confirmation pop-up for present box unwrapping
